<resources>
    <string name="app_name">RecyclerViewTakeThree</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_an_item">Enter an item:</string>
    <string name="enter_your_first_item">Enter your first item:</string>
    <string name="add_first_item">Add First Item</string>
    <string name="your_first_item">Your first item</string>
    <string name="add_item">Add Item</string>
    <string name="item">Item</string>
    <string name="editListItem">Edit</string>
    <string name="expiration_date">Expiration date</string>
    <string name="category_textView">Category:</string>
</resources>